{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 29,
  "lineage": "7223f359-2b4a-b6cc-8080-161e2eb94892",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf31d971a3ca20d6",
            "arn": "arn:aws:ec2:us-east-2:253896803446:instance/i-083da2d58a25b9006",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083da2d58a25b9006",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "publicKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-002a36973df330c3b",
            "private_dns": "ip-10-1-0-190.us-east-2.compute.internal",
            "private_ip": "10.1.0.190",
            "public_dns": "ec2-18-221-134-188.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.134.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc6455f371e1b0d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e17fbf12ee6a82f3",
            "tags": {
              "Environment": "Production"
            },
            "tags_all": {
              "Environment": "Production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-063959fb026d3f2af"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253896803446:internet-gateway/igw-0b2acd208a1049ba7",
            "id": "igw-0b2acd208a1049ba7",
            "owner_id": "253896803446",
            "tags": {
              "Environment": "Production"
            },
            "tags_all": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0c610f825892eca4d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253896803446:route-table/rtb-0812103e5bb36b1d5",
            "id": "rtb-0812103e5bb36b1d5",
            "owner_id": "253896803446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2acd208a1049ba7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production"
            },
            "tags_all": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0c610f825892eca4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b07a3cb16e9fbbd",
            "route_table_id": "rtb-0812103e5bb36b1d5",
            "subnet_id": "subnet-0e17fbf12ee6a82f3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253896803446:security-group/sg-063959fb026d3f2af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063959fb026d3f2af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "253896803446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production"
            },
            "tags_all": {
              "Environment": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c610f825892eca4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253896803446:subnet/subnet-0e17fbf12ee6a82f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0e17fbf12ee6a82f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253896803446",
            "tags": {
              "Environment": "Production"
            },
            "tags_all": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0c610f825892eca4d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:253896803446:vpc/vpc-0c610f825892eca4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0686242b615c190f0",
            "default_route_table_id": "rtb-04f54a678e35b77b1",
            "default_security_group_id": "sg-0d70ea69dcc652904",
            "dhcp_options_id": "dopt-3e941b55",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c610f825892eca4d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04f54a678e35b77b1",
            "owner_id": "253896803446",
            "tags": {
              "Environment": "Production"
            },
            "tags_all": {
              "Environment": "Production"
            }
          }
        }
      ]
    }
  ]
}